kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mern-client
  template:
    metadata:
      labels:
        app: mern-client
    spec:
      containers:
      - name: mern-client
        image: docker.io/chrayef/mern-client:latest
        ports:
        - containerPort: 3000
