kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
 #   kubernetes.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  rules:
    - host:
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-service
                port:
                  number: 9000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-service
                port:
                  number: 3000
